ci(asset): 引入tailwindcss

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,7 @@
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
 page {
   font-family: Source Han Sans CN;
   width: 100%;
